tool/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file_input
Rule 1     file_input -> suite ENDMARKER
Rule 2     block -> block_keyword fragment COLON NEWLINE INDENT suite DEDENT
Rule 3     block -> block_keyword fragment COLON suite
Rule 4     block -> block_keyword fragment COLON NEWLINE
Rule 5     block_keyword -> CLASS
Rule 6     block_keyword -> DEF
Rule 7     block_keyword -> IF
Rule 8     block_keyword -> ELIF
Rule 9     block_keyword -> ELSE
Rule 10    block_keyword -> TRY
Rule 11    block_keyword -> EXCEPT
Rule 12    block_keyword -> FINALLY
Rule 13    block_keyword -> WITH
Rule 14    block_keyword -> WHILE
Rule 15    block_keyword -> FOR
Rule 16    suite -> stmt
Rule 17    suite -> suite stmt
Rule 18    stmt -> fragment NEWLINE
Rule 19    stmt -> fragment
Rule 20    stmt -> NEWLINE
Rule 21    stmt -> block
Rule 22    fragment -> fragment LBRACE
Rule 23    fragment -> fragment RBRACE
Rule 24    fragment -> fragment STRING_END
Rule 25    fragment -> fragment STRING_CONTINUE
Rule 26    fragment -> fragment STRING
Rule 27    fragment -> fragment STRING_START_TRIPLE
Rule 28    fragment -> fragment WS
Rule 29    fragment -> fragment STRING_START_SINGLE
Rule 30    fragment -> fragment NUMBER
Rule 31    fragment -> fragment NAME
Rule 32    fragment -> fragment LPAR
Rule 33    fragment -> fragment RPAR
Rule 34    fragment -> fragment OPERATOR
Rule 35    fragment -> fragment LSQB
Rule 36    fragment -> fragment RSQB
Rule 37    fragment -> fragment COLON
Rule 38    fragment -> fragment block_keyword
Rule 39    fragment -> fragment PERIOD
Rule 40    fragment -> fragment RANGE
Rule 41    fragment -> block_keyword
Rule 42    fragment -> LBRACE
Rule 43    fragment -> RBRACE
Rule 44    fragment -> STRING_END
Rule 45    fragment -> STRING_CONTINUE
Rule 46    fragment -> STRING
Rule 47    fragment -> STRING_START_TRIPLE
Rule 48    fragment -> WS
Rule 49    fragment -> STRING_START_SINGLE
Rule 50    fragment -> NUMBER
Rule 51    fragment -> NAME
Rule 52    fragment -> LPAR
Rule 53    fragment -> RPAR
Rule 54    fragment -> LSQB
Rule 55    fragment -> RSQB
Rule 56    fragment -> COLON
Rule 57    fragment -> OPERATOR
Rule 58    fragment -> COMMENT
Rule 59    fragment -> RANGE

Terminals, with rules where they appear

CLASS                : 5
COLON                : 2 3 4 37 56
COMMENT              : 58
DEDENT               : 2
DEF                  : 6
ELIF                 : 8
ELSE                 : 9
ENDMARKER            : 1
EXCEPT               : 11
FINALLY              : 12
FOR                  : 15
IF                   : 7
INDENT               : 2
LBRACE               : 22 42
LPAR                 : 32 52
LSQB                 : 35 54
NAME                 : 31 51
NEWLINE              : 2 4 18 20
NUMBER               : 30 50
OPERATOR             : 34 57
PERIOD               : 39
RANGE                : 40 59
RBRACE               : 23 43
RPAR                 : 33 53
RSQB                 : 36 55
STRING               : 26 46
STRING_CONTINUE      : 25 45
STRING_END           : 24 44
STRING_START_SINGLE  : 29 49
STRING_START_TRIPLE  : 27 47
TRY                  : 10
WHILE                : 14
WITH                 : 13
WS                   : 28 48
error                : 

Nonterminals, with rules where they appear

block                : 21
block_keyword        : 2 3 4 38 41
file_input           : 0
fragment             : 2 3 4 18 19 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
stmt                 : 16 17
suite                : 1 2 3 17

Parsing method: LALR

state 0

    (0) S' -> . file_input
    (1) file_input -> . suite ENDMARKER
    (16) suite -> . stmt
    (17) suite -> . suite stmt
    (18) stmt -> . fragment NEWLINE
    (19) stmt -> . fragment
    (20) stmt -> . NEWLINE
    (21) stmt -> . block
    (22) fragment -> . fragment LBRACE
    (23) fragment -> . fragment RBRACE
    (24) fragment -> . fragment STRING_END
    (25) fragment -> . fragment STRING_CONTINUE
    (26) fragment -> . fragment STRING
    (27) fragment -> . fragment STRING_START_TRIPLE
    (28) fragment -> . fragment WS
    (29) fragment -> . fragment STRING_START_SINGLE
    (30) fragment -> . fragment NUMBER
    (31) fragment -> . fragment NAME
    (32) fragment -> . fragment LPAR
    (33) fragment -> . fragment RPAR
    (34) fragment -> . fragment OPERATOR
    (35) fragment -> . fragment LSQB
    (36) fragment -> . fragment RSQB
    (37) fragment -> . fragment COLON
    (38) fragment -> . fragment block_keyword
    (39) fragment -> . fragment PERIOD
    (40) fragment -> . fragment RANGE
    (41) fragment -> . block_keyword
    (42) fragment -> . LBRACE
    (43) fragment -> . RBRACE
    (44) fragment -> . STRING_END
    (45) fragment -> . STRING_CONTINUE
    (46) fragment -> . STRING
    (47) fragment -> . STRING_START_TRIPLE
    (48) fragment -> . WS
    (49) fragment -> . STRING_START_SINGLE
    (50) fragment -> . NUMBER
    (51) fragment -> . NAME
    (52) fragment -> . LPAR
    (53) fragment -> . RPAR
    (54) fragment -> . LSQB
    (55) fragment -> . RSQB
    (56) fragment -> . COLON
    (57) fragment -> . OPERATOR
    (58) fragment -> . COMMENT
    (59) fragment -> . RANGE
    (2) block -> . block_keyword fragment COLON NEWLINE INDENT suite DEDENT
    (3) block -> . block_keyword fragment COLON suite
    (4) block -> . block_keyword fragment COLON NEWLINE
    (5) block_keyword -> . CLASS
    (6) block_keyword -> . DEF
    (7) block_keyword -> . IF
    (8) block_keyword -> . ELIF
    (9) block_keyword -> . ELSE
    (10) block_keyword -> . TRY
    (11) block_keyword -> . EXCEPT
    (12) block_keyword -> . FINALLY
    (13) block_keyword -> . WITH
    (14) block_keyword -> . WHILE
    (15) block_keyword -> . FOR

    NEWLINE         shift and go to state 11
    LBRACE          shift and go to state 31
    RBRACE          shift and go to state 19
    STRING_END      shift and go to state 16
    STRING_CONTINUE shift and go to state 35
    STRING          shift and go to state 9
    STRING_START_TRIPLE shift and go to state 2
    WS              shift and go to state 6
    STRING_START_SINGLE shift and go to state 26
    NUMBER          shift and go to state 3
    NAME            shift and go to state 32
    LPAR            shift and go to state 1
    RPAR            shift and go to state 4
    LSQB            shift and go to state 29
    RSQB            shift and go to state 17
    COLON           shift and go to state 14
    OPERATOR        shift and go to state 28
    COMMENT         shift and go to state 10
    RANGE           shift and go to state 25
    CLASS           shift and go to state 18
    DEF             shift and go to state 8
    IF              shift and go to state 30
    ELIF            shift and go to state 13
    ELSE            shift and go to state 23
    TRY             shift and go to state 24
    EXCEPT          shift and go to state 12
    FINALLY         shift and go to state 34
    WITH            shift and go to state 7
    WHILE           shift and go to state 5
    FOR             shift and go to state 20

    fragment                       shift and go to state 21
    file_input                     shift and go to state 33
    stmt                           shift and go to state 22
    block_keyword                  shift and go to state 27
    suite                          shift and go to state 15
    block                          shift and go to state 36

state 1

    (52) fragment -> LPAR .

    NEWLINE         reduce using rule 52 (fragment -> LPAR .)
    LBRACE          reduce using rule 52 (fragment -> LPAR .)
    RBRACE          reduce using rule 52 (fragment -> LPAR .)
    STRING_END      reduce using rule 52 (fragment -> LPAR .)
    STRING_CONTINUE reduce using rule 52 (fragment -> LPAR .)
    STRING          reduce using rule 52 (fragment -> LPAR .)
    STRING_START_TRIPLE reduce using rule 52 (fragment -> LPAR .)
    WS              reduce using rule 52 (fragment -> LPAR .)
    STRING_START_SINGLE reduce using rule 52 (fragment -> LPAR .)
    NUMBER          reduce using rule 52 (fragment -> LPAR .)
    NAME            reduce using rule 52 (fragment -> LPAR .)
    LPAR            reduce using rule 52 (fragment -> LPAR .)
    RPAR            reduce using rule 52 (fragment -> LPAR .)
    OPERATOR        reduce using rule 52 (fragment -> LPAR .)
    LSQB            reduce using rule 52 (fragment -> LPAR .)
    RSQB            reduce using rule 52 (fragment -> LPAR .)
    COLON           reduce using rule 52 (fragment -> LPAR .)
    PERIOD          reduce using rule 52 (fragment -> LPAR .)
    RANGE           reduce using rule 52 (fragment -> LPAR .)
    CLASS           reduce using rule 52 (fragment -> LPAR .)
    DEF             reduce using rule 52 (fragment -> LPAR .)
    IF              reduce using rule 52 (fragment -> LPAR .)
    ELIF            reduce using rule 52 (fragment -> LPAR .)
    ELSE            reduce using rule 52 (fragment -> LPAR .)
    TRY             reduce using rule 52 (fragment -> LPAR .)
    EXCEPT          reduce using rule 52 (fragment -> LPAR .)
    FINALLY         reduce using rule 52 (fragment -> LPAR .)
    WITH            reduce using rule 52 (fragment -> LPAR .)
    WHILE           reduce using rule 52 (fragment -> LPAR .)
    FOR             reduce using rule 52 (fragment -> LPAR .)
    COMMENT         reduce using rule 52 (fragment -> LPAR .)
    ENDMARKER       reduce using rule 52 (fragment -> LPAR .)
    DEDENT          reduce using rule 52 (fragment -> LPAR .)


state 2

    (47) fragment -> STRING_START_TRIPLE .

    NEWLINE         reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    LBRACE          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    RBRACE          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    STRING_END      reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    STRING_CONTINUE reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    STRING          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    STRING_START_TRIPLE reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    WS              reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    STRING_START_SINGLE reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    NUMBER          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    NAME            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    LPAR            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    RPAR            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    OPERATOR        reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    LSQB            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    RSQB            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    COLON           reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    PERIOD          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    RANGE           reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    CLASS           reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    DEF             reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    IF              reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    ELIF            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    ELSE            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    TRY             reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    EXCEPT          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    FINALLY         reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    WITH            reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    WHILE           reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    FOR             reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    COMMENT         reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    ENDMARKER       reduce using rule 47 (fragment -> STRING_START_TRIPLE .)
    DEDENT          reduce using rule 47 (fragment -> STRING_START_TRIPLE .)


state 3

    (50) fragment -> NUMBER .

    NEWLINE         reduce using rule 50 (fragment -> NUMBER .)
    LBRACE          reduce using rule 50 (fragment -> NUMBER .)
    RBRACE          reduce using rule 50 (fragment -> NUMBER .)
    STRING_END      reduce using rule 50 (fragment -> NUMBER .)
    STRING_CONTINUE reduce using rule 50 (fragment -> NUMBER .)
    STRING          reduce using rule 50 (fragment -> NUMBER .)
    STRING_START_TRIPLE reduce using rule 50 (fragment -> NUMBER .)
    WS              reduce using rule 50 (fragment -> NUMBER .)
    STRING_START_SINGLE reduce using rule 50 (fragment -> NUMBER .)
    NUMBER          reduce using rule 50 (fragment -> NUMBER .)
    NAME            reduce using rule 50 (fragment -> NUMBER .)
    LPAR            reduce using rule 50 (fragment -> NUMBER .)
    RPAR            reduce using rule 50 (fragment -> NUMBER .)
    OPERATOR        reduce using rule 50 (fragment -> NUMBER .)
    LSQB            reduce using rule 50 (fragment -> NUMBER .)
    RSQB            reduce using rule 50 (fragment -> NUMBER .)
    COLON           reduce using rule 50 (fragment -> NUMBER .)
    PERIOD          reduce using rule 50 (fragment -> NUMBER .)
    RANGE           reduce using rule 50 (fragment -> NUMBER .)
    CLASS           reduce using rule 50 (fragment -> NUMBER .)
    DEF             reduce using rule 50 (fragment -> NUMBER .)
    IF              reduce using rule 50 (fragment -> NUMBER .)
    ELIF            reduce using rule 50 (fragment -> NUMBER .)
    ELSE            reduce using rule 50 (fragment -> NUMBER .)
    TRY             reduce using rule 50 (fragment -> NUMBER .)
    EXCEPT          reduce using rule 50 (fragment -> NUMBER .)
    FINALLY         reduce using rule 50 (fragment -> NUMBER .)
    WITH            reduce using rule 50 (fragment -> NUMBER .)
    WHILE           reduce using rule 50 (fragment -> NUMBER .)
    FOR             reduce using rule 50 (fragment -> NUMBER .)
    COMMENT         reduce using rule 50 (fragment -> NUMBER .)
    ENDMARKER       reduce using rule 50 (fragment -> NUMBER .)
    DEDENT          reduce using rule 50 (fragment -> NUMBER .)


state 4

    (53) fragment -> RPAR .

    NEWLINE         reduce using rule 53 (fragment -> RPAR .)
    LBRACE          reduce using rule 53 (fragment -> RPAR .)
    RBRACE          reduce using rule 53 (fragment -> RPAR .)
    STRING_END      reduce using rule 53 (fragment -> RPAR .)
    STRING_CONTINUE reduce using rule 53 (fragment -> RPAR .)
    STRING          reduce using rule 53 (fragment -> RPAR .)
    STRING_START_TRIPLE reduce using rule 53 (fragment -> RPAR .)
    WS              reduce using rule 53 (fragment -> RPAR .)
    STRING_START_SINGLE reduce using rule 53 (fragment -> RPAR .)
    NUMBER          reduce using rule 53 (fragment -> RPAR .)
    NAME            reduce using rule 53 (fragment -> RPAR .)
    LPAR            reduce using rule 53 (fragment -> RPAR .)
    RPAR            reduce using rule 53 (fragment -> RPAR .)
    OPERATOR        reduce using rule 53 (fragment -> RPAR .)
    LSQB            reduce using rule 53 (fragment -> RPAR .)
    RSQB            reduce using rule 53 (fragment -> RPAR .)
    COLON           reduce using rule 53 (fragment -> RPAR .)
    PERIOD          reduce using rule 53 (fragment -> RPAR .)
    RANGE           reduce using rule 53 (fragment -> RPAR .)
    CLASS           reduce using rule 53 (fragment -> RPAR .)
    DEF             reduce using rule 53 (fragment -> RPAR .)
    IF              reduce using rule 53 (fragment -> RPAR .)
    ELIF            reduce using rule 53 (fragment -> RPAR .)
    ELSE            reduce using rule 53 (fragment -> RPAR .)
    TRY             reduce using rule 53 (fragment -> RPAR .)
    EXCEPT          reduce using rule 53 (fragment -> RPAR .)
    FINALLY         reduce using rule 53 (fragment -> RPAR .)
    WITH            reduce using rule 53 (fragment -> RPAR .)
    WHILE           reduce using rule 53 (fragment -> RPAR .)
    FOR             reduce using rule 53 (fragment -> RPAR .)
    COMMENT         reduce using rule 53 (fragment -> RPAR .)
    ENDMARKER       reduce using rule 53 (fragment -> RPAR .)
    DEDENT          reduce using rule 53 (fragment -> RPAR .)


state 5

    (14) block_keyword -> WHILE .

    LBRACE          reduce using rule 14 (block_keyword -> WHILE .)
    RBRACE          reduce using rule 14 (block_keyword -> WHILE .)
    STRING_END      reduce using rule 14 (block_keyword -> WHILE .)
    STRING_CONTINUE reduce using rule 14 (block_keyword -> WHILE .)
    STRING          reduce using rule 14 (block_keyword -> WHILE .)
    STRING_START_TRIPLE reduce using rule 14 (block_keyword -> WHILE .)
    WS              reduce using rule 14 (block_keyword -> WHILE .)
    STRING_START_SINGLE reduce using rule 14 (block_keyword -> WHILE .)
    NUMBER          reduce using rule 14 (block_keyword -> WHILE .)
    NAME            reduce using rule 14 (block_keyword -> WHILE .)
    LPAR            reduce using rule 14 (block_keyword -> WHILE .)
    RPAR            reduce using rule 14 (block_keyword -> WHILE .)
    LSQB            reduce using rule 14 (block_keyword -> WHILE .)
    RSQB            reduce using rule 14 (block_keyword -> WHILE .)
    COLON           reduce using rule 14 (block_keyword -> WHILE .)
    OPERATOR        reduce using rule 14 (block_keyword -> WHILE .)
    COMMENT         reduce using rule 14 (block_keyword -> WHILE .)
    RANGE           reduce using rule 14 (block_keyword -> WHILE .)
    CLASS           reduce using rule 14 (block_keyword -> WHILE .)
    DEF             reduce using rule 14 (block_keyword -> WHILE .)
    IF              reduce using rule 14 (block_keyword -> WHILE .)
    ELIF            reduce using rule 14 (block_keyword -> WHILE .)
    ELSE            reduce using rule 14 (block_keyword -> WHILE .)
    TRY             reduce using rule 14 (block_keyword -> WHILE .)
    EXCEPT          reduce using rule 14 (block_keyword -> WHILE .)
    FINALLY         reduce using rule 14 (block_keyword -> WHILE .)
    WITH            reduce using rule 14 (block_keyword -> WHILE .)
    WHILE           reduce using rule 14 (block_keyword -> WHILE .)
    FOR             reduce using rule 14 (block_keyword -> WHILE .)
    NEWLINE         reduce using rule 14 (block_keyword -> WHILE .)
    PERIOD          reduce using rule 14 (block_keyword -> WHILE .)
    ENDMARKER       reduce using rule 14 (block_keyword -> WHILE .)
    DEDENT          reduce using rule 14 (block_keyword -> WHILE .)


state 6

    (48) fragment -> WS .

    NEWLINE         reduce using rule 48 (fragment -> WS .)
    LBRACE          reduce using rule 48 (fragment -> WS .)
    RBRACE          reduce using rule 48 (fragment -> WS .)
    STRING_END      reduce using rule 48 (fragment -> WS .)
    STRING_CONTINUE reduce using rule 48 (fragment -> WS .)
    STRING          reduce using rule 48 (fragment -> WS .)
    STRING_START_TRIPLE reduce using rule 48 (fragment -> WS .)
    WS              reduce using rule 48 (fragment -> WS .)
    STRING_START_SINGLE reduce using rule 48 (fragment -> WS .)
    NUMBER          reduce using rule 48 (fragment -> WS .)
    NAME            reduce using rule 48 (fragment -> WS .)
    LPAR            reduce using rule 48 (fragment -> WS .)
    RPAR            reduce using rule 48 (fragment -> WS .)
    OPERATOR        reduce using rule 48 (fragment -> WS .)
    LSQB            reduce using rule 48 (fragment -> WS .)
    RSQB            reduce using rule 48 (fragment -> WS .)
    COLON           reduce using rule 48 (fragment -> WS .)
    PERIOD          reduce using rule 48 (fragment -> WS .)
    RANGE           reduce using rule 48 (fragment -> WS .)
    CLASS           reduce using rule 48 (fragment -> WS .)
    DEF             reduce using rule 48 (fragment -> WS .)
    IF              reduce using rule 48 (fragment -> WS .)
    ELIF            reduce using rule 48 (fragment -> WS .)
    ELSE            reduce using rule 48 (fragment -> WS .)
    TRY             reduce using rule 48 (fragment -> WS .)
    EXCEPT          reduce using rule 48 (fragment -> WS .)
    FINALLY         reduce using rule 48 (fragment -> WS .)
    WITH            reduce using rule 48 (fragment -> WS .)
    WHILE           reduce using rule 48 (fragment -> WS .)
    FOR             reduce using rule 48 (fragment -> WS .)
    COMMENT         reduce using rule 48 (fragment -> WS .)
    ENDMARKER       reduce using rule 48 (fragment -> WS .)
    DEDENT          reduce using rule 48 (fragment -> WS .)


state 7

    (13) block_keyword -> WITH .

    LBRACE          reduce using rule 13 (block_keyword -> WITH .)
    RBRACE          reduce using rule 13 (block_keyword -> WITH .)
    STRING_END      reduce using rule 13 (block_keyword -> WITH .)
    STRING_CONTINUE reduce using rule 13 (block_keyword -> WITH .)
    STRING          reduce using rule 13 (block_keyword -> WITH .)
    STRING_START_TRIPLE reduce using rule 13 (block_keyword -> WITH .)
    WS              reduce using rule 13 (block_keyword -> WITH .)
    STRING_START_SINGLE reduce using rule 13 (block_keyword -> WITH .)
    NUMBER          reduce using rule 13 (block_keyword -> WITH .)
    NAME            reduce using rule 13 (block_keyword -> WITH .)
    LPAR            reduce using rule 13 (block_keyword -> WITH .)
    RPAR            reduce using rule 13 (block_keyword -> WITH .)
    LSQB            reduce using rule 13 (block_keyword -> WITH .)
    RSQB            reduce using rule 13 (block_keyword -> WITH .)
    COLON           reduce using rule 13 (block_keyword -> WITH .)
    OPERATOR        reduce using rule 13 (block_keyword -> WITH .)
    COMMENT         reduce using rule 13 (block_keyword -> WITH .)
    RANGE           reduce using rule 13 (block_keyword -> WITH .)
    CLASS           reduce using rule 13 (block_keyword -> WITH .)
    DEF             reduce using rule 13 (block_keyword -> WITH .)
    IF              reduce using rule 13 (block_keyword -> WITH .)
    ELIF            reduce using rule 13 (block_keyword -> WITH .)
    ELSE            reduce using rule 13 (block_keyword -> WITH .)
    TRY             reduce using rule 13 (block_keyword -> WITH .)
    EXCEPT          reduce using rule 13 (block_keyword -> WITH .)
    FINALLY         reduce using rule 13 (block_keyword -> WITH .)
    WITH            reduce using rule 13 (block_keyword -> WITH .)
    WHILE           reduce using rule 13 (block_keyword -> WITH .)
    FOR             reduce using rule 13 (block_keyword -> WITH .)
    NEWLINE         reduce using rule 13 (block_keyword -> WITH .)
    PERIOD          reduce using rule 13 (block_keyword -> WITH .)
    ENDMARKER       reduce using rule 13 (block_keyword -> WITH .)
    DEDENT          reduce using rule 13 (block_keyword -> WITH .)


state 8

    (6) block_keyword -> DEF .

    LBRACE          reduce using rule 6 (block_keyword -> DEF .)
    RBRACE          reduce using rule 6 (block_keyword -> DEF .)
    STRING_END      reduce using rule 6 (block_keyword -> DEF .)
    STRING_CONTINUE reduce using rule 6 (block_keyword -> DEF .)
    STRING          reduce using rule 6 (block_keyword -> DEF .)
    STRING_START_TRIPLE reduce using rule 6 (block_keyword -> DEF .)
    WS              reduce using rule 6 (block_keyword -> DEF .)
    STRING_START_SINGLE reduce using rule 6 (block_keyword -> DEF .)
    NUMBER          reduce using rule 6 (block_keyword -> DEF .)
    NAME            reduce using rule 6 (block_keyword -> DEF .)
    LPAR            reduce using rule 6 (block_keyword -> DEF .)
    RPAR            reduce using rule 6 (block_keyword -> DEF .)
    LSQB            reduce using rule 6 (block_keyword -> DEF .)
    RSQB            reduce using rule 6 (block_keyword -> DEF .)
    COLON           reduce using rule 6 (block_keyword -> DEF .)
    OPERATOR        reduce using rule 6 (block_keyword -> DEF .)
    COMMENT         reduce using rule 6 (block_keyword -> DEF .)
    RANGE           reduce using rule 6 (block_keyword -> DEF .)
    CLASS           reduce using rule 6 (block_keyword -> DEF .)
    DEF             reduce using rule 6 (block_keyword -> DEF .)
    IF              reduce using rule 6 (block_keyword -> DEF .)
    ELIF            reduce using rule 6 (block_keyword -> DEF .)
    ELSE            reduce using rule 6 (block_keyword -> DEF .)
    TRY             reduce using rule 6 (block_keyword -> DEF .)
    EXCEPT          reduce using rule 6 (block_keyword -> DEF .)
    FINALLY         reduce using rule 6 (block_keyword -> DEF .)
    WITH            reduce using rule 6 (block_keyword -> DEF .)
    WHILE           reduce using rule 6 (block_keyword -> DEF .)
    FOR             reduce using rule 6 (block_keyword -> DEF .)
    NEWLINE         reduce using rule 6 (block_keyword -> DEF .)
    PERIOD          reduce using rule 6 (block_keyword -> DEF .)
    ENDMARKER       reduce using rule 6 (block_keyword -> DEF .)
    DEDENT          reduce using rule 6 (block_keyword -> DEF .)


state 9

    (46) fragment -> STRING .

    NEWLINE         reduce using rule 46 (fragment -> STRING .)
    LBRACE          reduce using rule 46 (fragment -> STRING .)
    RBRACE          reduce using rule 46 (fragment -> STRING .)
    STRING_END      reduce using rule 46 (fragment -> STRING .)
    STRING_CONTINUE reduce using rule 46 (fragment -> STRING .)
    STRING          reduce using rule 46 (fragment -> STRING .)
    STRING_START_TRIPLE reduce using rule 46 (fragment -> STRING .)
    WS              reduce using rule 46 (fragment -> STRING .)
    STRING_START_SINGLE reduce using rule 46 (fragment -> STRING .)
    NUMBER          reduce using rule 46 (fragment -> STRING .)
    NAME            reduce using rule 46 (fragment -> STRING .)
    LPAR            reduce using rule 46 (fragment -> STRING .)
    RPAR            reduce using rule 46 (fragment -> STRING .)
    OPERATOR        reduce using rule 46 (fragment -> STRING .)
    LSQB            reduce using rule 46 (fragment -> STRING .)
    RSQB            reduce using rule 46 (fragment -> STRING .)
    COLON           reduce using rule 46 (fragment -> STRING .)
    PERIOD          reduce using rule 46 (fragment -> STRING .)
    RANGE           reduce using rule 46 (fragment -> STRING .)
    CLASS           reduce using rule 46 (fragment -> STRING .)
    DEF             reduce using rule 46 (fragment -> STRING .)
    IF              reduce using rule 46 (fragment -> STRING .)
    ELIF            reduce using rule 46 (fragment -> STRING .)
    ELSE            reduce using rule 46 (fragment -> STRING .)
    TRY             reduce using rule 46 (fragment -> STRING .)
    EXCEPT          reduce using rule 46 (fragment -> STRING .)
    FINALLY         reduce using rule 46 (fragment -> STRING .)
    WITH            reduce using rule 46 (fragment -> STRING .)
    WHILE           reduce using rule 46 (fragment -> STRING .)
    FOR             reduce using rule 46 (fragment -> STRING .)
    COMMENT         reduce using rule 46 (fragment -> STRING .)
    ENDMARKER       reduce using rule 46 (fragment -> STRING .)
    DEDENT          reduce using rule 46 (fragment -> STRING .)


state 10

    (58) fragment -> COMMENT .
